Cleanup - review & lint changes (library)